Fix all static analysis errors and tests